# WSelector

./: .gitignore  README.md  build.sh  install-icons.sh  io.github.Cookiiieee.WSelector.appdata.xml  io.github.Cookiiieee.WSelector.json  io.github.Cookiiieee.WSelector.metainfo.xml  meson.build  profiler.py  python-modules.json  requirements.txt  setup.py
bundle/: WSelector-0.1.8.flatpak
files/: wselector-wrapper.sh
wselector/: app.py  app.py.backup  app_memory_managed.py  memory.py  memory_manager.py  utils.py
wselector-repo/: summary  summary.idx
wselector-repo/refs/heads/app/io.github.Cookiiieee.WSelector/x86_64/: master
wselector-repo/refs/heads/runtime/io.github.Cookiiieee.WSelector.Debug/x86_64/: master
wselector-repo/summaries/: 8f2af62cf5213292d86a0b562322c5f3d4f676f8b70eac2a78f91fcc34b9cb11-e104bb0e135e368f79eec36369e8ccea77eda98d2703157bf007c51e91a24d26.delta
